methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:14: error: not found: type color
def faireV(c : color){
               ^